<resources>
    <string name="app_name">She Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BackDrop Navbar Buttons-->
    <string name="container_name">container_name</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart  </string>
    <string name="my_orders">My Orders</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="all_categories">All Categories</string>
    <string name="profile_image">Profile Image</string>
    <string name="made_with_love">Made with ❦️ by Prateek Singh</string>
    <string name="price">Price</string>
    <string name="item_sub_name">Item Sub Name</string>
    <string name="item_name">Item Name</string>
    <string name="rateing_default">4.2 ★</string>
    <string name="checkout">Checkout</string>
    <string name="product_details">Product Details:</string>
    <string name="product_description">Product Description:</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="added_to_cart">✔ Added</string>


    <!--    Payment Options-->
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>
    <string name="google_pay">Google Pay</string>
</resources>